# blue-ble

./: .gitignore  CMakeLists.txt
lib/R328/: libasound.so.2.0.0  libffi.so.6.0.1  libgio-2.0.so.0.5000.1  libglib-2.0.so.0.5000.1  libgmodule-2.0.so.0.5000.1  libgobject-2.0.so.0.5000.1  libjson-c.so.2.0.1  libpcre.so.1.2.6  libsbc.so.1.2.1
src/: CMakeLists.txt  bt_test.c
